# embedded_for_robotics

Controller/: CMakeLists.txt
Controller/cmake/: arm-none-eabi-gcc.cmake
Controller/inc/: differential_drive.h  encoder.h  imu.h  main.h  motor.h  pid.h  stm32f1xx_hal_conf.h
Controller/src/: differential_drive.c  encoder.c  imu.c  main.c  motor.c  pid.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
MPU6050/: .clang-format  CLANG_FORMAT.md  CMakeLists.txt  CMakePresets.json
MPU6050/Inc/: stm32f1xx_hal_conf.h
MPU6050/Src/: main.c  syscall.c  sysmem.c
STM32Cube_FW_F1_V1.8.0/: Release_Notes.html
STM32Cube_FW_F1_V1.8.0/Drivers/CMSIS/Include/: core_cm3.h
STM32Cube_FW_F1_V1.8.0/Drivers/STM32F1xx_HAL_Driver/: Release_Notes.html
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/FatFs/FatFs_uSD/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/FreeRTOS/FreeRTOS_ThreadCreation/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/IAP/IAP_Binary_Template/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/IAP/IAP_Main/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/LwIP/LwIP_TCP_Echo_Client/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/LwIP/LwIP_TCP_Echo_Server/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/LwIP/LwIP_UDP_Echo_Client/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/LwIP/LwIP_UDP_Echo_Server/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/STemWin/STemWin_HelloWorld/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Device/CDC_Standalone/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Device/CustomHID_Standalone/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Device/DFU_Standalone/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Device/HID_Standalone/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Device/MSC_Standalone/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Host/CDC_Standalone/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Host/HID_RTOS/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Host/HID_Standalone/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Host/MSC_RTOS/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Applications/USB_Host/MSC_Standalone/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Examples/ADC/ADC_DualModeInterleaved/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Examples/BSP/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Templates/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Templates/Inc/: main.h
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Templates/MDK-ARM/: startup_stm32f107xc.s
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Templates/Src/: main.c
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Templates_LL/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Templates_LL/Inc/: main.h
STM32Cube_FW_F1_V1.8.0/Projects/STM3210C_EVAL/Templates_LL/Src/: main.c
STM32Cube_FW_F1_V1.8.0/Projects/STM3210E_EVAL/Examples/BSP/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210E_EVAL/Templates/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210E_EVAL/Templates/Inc/: main.h
STM32Cube_FW_F1_V1.8.0/Projects/STM3210E_EVAL/Templates/Src/: main.c
STM32Cube_FW_F1_V1.8.0/Projects/STM3210E_EVAL/Templates_LL/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM3210E_EVAL/Templates_LL/Inc/: main.h
STM32Cube_FW_F1_V1.8.0/Projects/STM3210E_EVAL/Templates_LL/Src/: main.c
STM32Cube_FW_F1_V1.8.0/Projects/STM32F103RB-Nucleo/Demonstrations/Adafruit_LCD_1_8_SD_Joystick/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM32F103RB-Nucleo/Templates/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM32F103RB-Nucleo/Templates/Inc/: main.h
STM32Cube_FW_F1_V1.8.0/Projects/STM32F103RB-Nucleo/Templates/Src/: main.c  stm32f1xx_hal_msp.c
STM32Cube_FW_F1_V1.8.0/Projects/STM32F103RB-Nucleo/Templates_LL/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM32F103RB-Nucleo/Templates_LL/Inc/: main.h
STM32Cube_FW_F1_V1.8.0/Projects/STM32F103RB-Nucleo/Templates_LL/Src/: main.c  stm32f1xx_it.c
STM32Cube_FW_F1_V1.8.0/Projects/STM32VL-Discovery/Templates/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM32VL-Discovery/Templates/Inc/: main.h
STM32Cube_FW_F1_V1.8.0/Projects/STM32VL-Discovery/Templates/Src/: main.c  stm32f1xx_hal_msp.c
STM32Cube_FW_F1_V1.8.0/Projects/STM32VL-Discovery/Templates_LL/: readme.txt
STM32Cube_FW_F1_V1.8.0/Projects/STM32VL-Discovery/Templates_LL/Inc/: main.h  stm32f1xx_it.h
STM32Cube_FW_F1_V1.8.0/Projects/STM32VL-Discovery/Templates_LL/Src/: main.c
oled_display/: CMakeLists.txt  README.md  build.sh
oled_display/inc/: bit_math.h  encoder.h  fonts.hpp  i2c.hpp  main.h  ssd1306.hpp  stm32f1xx_hal_conf.h  stm32f1xx_it.h
oled_display/linker/: STM32F103C8Tx_FLASH.ld
oled_display/scripts/: flash.sh
oled_display/src/: encoder.c  fonts.cpp  i2c.cpp  main.cpp  ssd1306.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c
quadrature_encoder_baremetal/: .gitignore  CMakeLists.txt  Quadrature_Encoder_Slides.odp  README.md  build.sh  generate_slides.py
quadrature_encoder_baremetal/inc/: encoder.h  main.h  motor.h  stm32f1xx_it.h  uart.h
quadrature_encoder_baremetal/scripts/: flash.sh
quadrature_encoder_baremetal/src/: encoder.c  main.c  main_exti.c  motor.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  uart.c
serial_port/: mock_data.py  mpu6050_parser.py  mpu6050_visualizer.py  serial_parser.py
stm32_cmake_template/: .gitignore  CMakeLists.txt  QUICK_REFERENCE.md  README.md  VSCODE_DEBUG_GUIDE.md
stm32_cmake_template/inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
stm32_cmake_template/scripts/: flash.sh  openocd.cfg
stm32_cmake_template/src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
(+1304 files in other folders)
